--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@angular/router": "17.0.3",
         "@apollo/client": "^3.8.10",
         "@ngneat/transloco": "6.0.0",
+        "@vercel/analytics": "^1.2.2",
         "apexcharts": "3.44.0",
         "apollo-angular": "^6.0.0",
         "crypto-js": "4.2.0",
