--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@apollo/client": "^3.8.10",
         "@ngneat/transloco": "6.0.0",
         "@vercel/analytics": "^1.2.2",
+        "@vercel/speed-insights": "^1.0.10",
         "apexcharts": "3.44.0",
         "apollo-angular": "^6.0.0",
         "crypto-js": "4.2.0",
