--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "@tailwindcss/typography": "0.5.10",
         "@types/chroma-js": "2.4.3",
         "@types/crypto-js": "3.1.47",
+        "@types/gtag.js": "^0.0.19",
         "@types/highlight.js": "10.1.0",
         "@types/jasmine": "5.1.2",
         "@types/lodash": "4.14.201",
